Updated default settings to use a more appropriate initial theme.

--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -55,7 +55,7 @@
 [GUI]
 fullscreen = True
 vkeyboard = True
-theme = pride
+theme = dark
 main_object_name = Order
 main_object_subtitle = Phone Number
 main_obj_flag_a_name = Dessert
