Adding missing project files to nightly. Removed some unnecessary comments. Changed label wrapping and font size for paging method of ContentObject class. Added dynamic delay after notification sound is played that is set to the length of the sound so longer sounds can be used while maintaining constant delay between alerts.

--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -53,7 +53,7 @@
 # - client_psk_exp_date: The expiration date of the primary PSK. Automatically updated after PSK refresh.
 
 [GUI]
-fullscreen = True
+fullscreen = False
 vkeyboard = True
 theme = dark
 main_object_name = Order
@@ -66,7 +66,7 @@ secondary_flag_a_name = Limited
 secondary_flag_b_name = O/S
 secondary_flags_enabled = False
 enable_masking = True
-debug = True
+debug = False
 
 [NETWORK]
 broker_ip = 192.168.1.1
