Restored fullscreen setting to True

--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -53,7 +53,7 @@
 # - client_psk_exp_date: The expiration date of the primary PSK. Automatically updated after PSK refresh.
 
 [GUI]
-fullscreen = False
+fullscreen = True
 vkeyboard = True
 theme = dark
 main_object_name = Order
