Fixed sidebar bug - changed update_local_state('active_panel', self) to update_local_state('active_panel', <respective panel reference>. Also updated settings to include easter egg themes.

--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -20,6 +20,7 @@
 # - theme: Options include
 #     + LIGHT THEMES: light, light_blue, light_green
 #     + DARK THEMES: dark, high_contrast_cyan, high_contrast_red, high_contrast_purple
+#     + UNLISTED THEMES: pride, super_dark
 # - main_object_name: The name used for the primary objects in your workflow.
 #     + Example: "Order", "Customer", "Request". 
 #     + This name will be used throughout the program for important items.
