--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -20,7 +20,7 @@
 # - theme: Options include
 #     + LIGHT THEMES: light, light_blue, light_green
 #     + DARK THEMES: dark, high_contrast_cyan, high_contrast_red, high_contrast_purple
-#     + UNLISTED THEMES: pride, super_dark
+#     + UNLISTED THEMES: super_dark, pride (pride takes extra system resources and may cause performance issues on weaker devices)
 # - main_object_name: The name used for the primary objects in your workflow.
 #     + Example: "Order", "Customer", "Request". 
 #     + This name will be used throughout the program for important items.
@@ -63,7 +63,7 @@
 [GUI]
 fullscreen = True
 vkeyboard = True
-theme = dark
+theme = super_dark
 main_object_name = Order
 main_object_subtitle = Phone Number
 main_obj_flag_a_name = Dessert
@@ -85,7 +85,7 @@ broker_qos = 1
 client_id = example_id
 client_audience = example_audience
 client_name = Example Name
-client_position = example_position
+client_position = Example Position
 client_password = example_password
 
 [SECRETS]
