--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -63,7 +63,7 @@
 [GUI]
 fullscreen = True
 vkeyboard = True
-theme = super_dark
+theme = dark
 main_object_name = Order
 main_object_subtitle = Phone Number
 main_obj_flag_a_name = Dessert
