--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -69,11 +69,14 @@ main_object_subtitle = Phone Number
 main_obj_flag_a_name = Dessert
 main_obj_flag_b_name = Milkshake
 main_flags_enabled = True
+main_enable_masking = True
+main_enable_timer = True
 secondary_object_name = 86
 secondary_flag_a_name = Limited
 secondary_flag_b_name = O/S
 secondary_flags_enabled = False
-enable_masking = True
+secondary_enable_masking = False
+secondary_enable_timer = False
 debug = False
 
 [NETWORK]
