--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -77,6 +77,7 @@ secondary_flag_b_name = O/S
 secondary_flags_enabled = False
 secondary_enable_masking = False
 secondary_enable_timer = False
+timer_update_delay = 5
 debug = False
 
 [NETWORK]
