--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -33,8 +33,8 @@
 # - vkeyboard: Enables on-screen keyboard. Recommended: True for touch-based clients. True/False
 # - theme: Choose a theme for the GUI. Available options:
 #     + LIGHT THEMES: light, light_blue, light_green
-#     + DARK THEMES: dark, high_contrast_cyan, high_contrast_red, high_contrast_purple
-#     + UNLISTED THEMES: super_dark, pride (Note: 'pride' requires extra system resources and may impact performance)
+#     + DARK THEMES: dark, dark_blue, dark_red, dark_purple
+#     + UNLISTED THEMES: super_dark, h4x0r, pride (Note: 'pride' requires extra system resources and may impact performance)
 # - main_object_name: Name used for primary objects in your workflow (e.g., "Order", "Customer", "Request").
 # - main_object_subtitle: Subtitle for primary objects (e.g., "Phone Number", "Amount").
 # - main_obj_flag_a_name: Custom name for "flag_a" of primary objects.
@@ -83,7 +83,7 @@
 [GUI]
 fullscreen = True
 vkeyboard = True
-theme = dark
+theme = h4x0r
 main_object_name = Order
 main_object_subtitle = Phone Number
 main_obj_flag_a_name = Dessert
