**NON-FUNCTIONAL COMMIT**
**Networking Update** refactoring networking logic to better authenticate broker to client.

**Current Error** is on line 1336: Invalid host. This has began occuring after I moved all of the authentication logic out of the mqtt thread. This move was done because the mqtt loop cannot start until after the auth logic has finished, thus not allowing client to receive messages. Auth code is now in logic_thread.

--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -101,12 +101,12 @@ timer_update_delay = 5
 debug = False
 
 [NETWORK]
-broker_ip = 192.168.1.1
+broker_ip = localhost
 broker_port = 1883
 broker_qos = 1
 
 [CLIENT]
-client_id = example_id
+client_id = example_username
 client_audience = example_audience
 client_name = Example Name
 client_position = Example Position
