--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 venv/
+resources/no_update.txtresources/no_update.txtresources/no_update.txtresources/no_update.txtresources/no_update.txtresources/no_update.txt
