--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 venv/
-resources/no_update.txtresources/no_update.txtresources/no_update.txtresources/no_update.txtresources/no_update.txtresources/no_update.txt
+resources/no_update.txt
+resources/log.txt
