--- a/resources/settings.ini
+++ b/resources/settings.ini
@@ -81,12 +81,12 @@
 # - enable_webapp: Creates a local web app accessible from other devices on the network. True/False
 
 [OPERATION]
-mode = broker
+mode = client
 
 [GUI]
 fullscreen = True
 vkeyboard = True
-theme = h4x0r
+theme = 
 main_object_name = Order
 main_object_subtitle = Phone Number
 main_obj_flag_a_name = Dessert
@@ -101,7 +101,7 @@ secondary_flags_enabled = False
 secondary_enable_masking = False
 secondary_enable_timer = False
 timer_update_delay = 5
-debug = False
+debug = True
 
 [NETWORK]
 broker_ip = localhost
